--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   "dependencies": {
     "@keystatic/core": "^0.5.48",
     "@keystatic/next": "^5.0.4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/query-sync-storage-persister": "^5.90.14",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-persist-client": "^5.90.14",
-    "next": "14.2.15",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "outstatic": "^1.4.14",
+    "outstatic": "^2.0.17",
     "puppeteer": "^24.35.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "rss": "^1.2.2",
@@ -43,10 +44,10 @@
     "@types/rss": "^0.0.32",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.0.0",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
     "sharp": "^0.34.5",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   }
 }
